ToDoList was updated. More components was added

--- a/src/views/ToDoList/index.module.scss
+++ b/src/views/ToDoList/index.module.scss
@@ -3,6 +3,7 @@
     min-width: 600px;
     border-radius: 20px;
     padding: 20px 55px 30px;
+    margin-bottom: 20px;
 
     &Title {
        font-size: 40px;
